# parking-services

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  README.md  build-arm.sh  build-x86.sh  docker-compose.yml  pyproject.toml
config/nginx/: app.conf
config/uwsgi/: uwsgi.ini
deploy/: docker-compose.yml  startup.sh
deploy/configs/nginx/conf.d/: app.conf  custom_proxy_settings.conf
deploy/orangepi/: docker-compose.yml
deploy/webserver/: docker-compose.yml
docker/images/app/: Dockerfile  Dockerfile.arm
docker/images/os/: Dockerfile  Dockerfile.arm
docker/images/pip/: Dockerfile  Dockerfile.arm
parking_services/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
parking_services/api/: apps.py  urls.py
parking_services/api/v1/: urls.py
parking_services/api/v1/serializers/: parking_section.py  parking_state.py
parking_services/api/v1/views/: __init__.py  parking_section.py  parking_state.py
parking_services/core/: admin.py  apps.py  models.py  tasks.py
parking_services/core/management/commands/: init_sections.py  start_task.py  test.py
parking_services/core/migrations/: 0001_initial.py
parking_services/core/vision/: camera.py  logic.py
